# wjelement

./: seed.json
mayhem/: Dockerfile  Mayhemfile
src/cli/: CMakeLists.txt  wjecli.c
